--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 <section id="cta">
 <h2>Next steps: explore FAQs and our editorial approach</h2>
-<p>This guide provides a foundation for choosing synonyms for power with precision and confidence. For answers to common questions about synonym selection, meanings of power, and reference tools, visit the <a href="/faq">Power Synonym FAQ</a>. To understand how this site organises related words to power and our editorial principles, read the <a href="/about-us">About Power Synonym</a> page.</p>
+<p>This guide provides a foundation for choosing synonyms for power with precision and confidence. For answers to common questions about synonym selection, meanings of power, and reference tools, visit the <a href="/faq">Power Synonym FAQ</a>. To understand how this site organises related words to power and our editorial principles, read about our <a href="https://supabet.ca/">Supabet Login</a> page.</p>
 <p>Effective use of a power synonym depends on understanding context, register, and meaning. This site equips you with the knowledge and resources to make informed decisions in your writing. Whether you are drafting technical documentation, academic essays, or creative work, the principles outlined here will help you choose alternative words for power that enhance clarity and precision.</p>
 </section>
 
